# TAMARL_Env

./: .gitignore  CLAUDE.md  LICENSE  README.md  profile.stats  pyproject.toml
legacy_markov_game/components/: actions.py
legacy_markov_game/envs/: sb3_gymnasium_wrapper.py
legacy_markov_game/rl/agents/: hab_agent.py
scratch/: bandit_profile.txt  profile_bandit_training.py
scripts/: generate_demo_gif.sh  investigate_violations.py  profile_bandit_memory.py  profile_gpu_memory.py  profile_train_bandit.py  read_profile.py  regenerate_sanity_plots.py  scale_matsim_network.py  train_marl.py
tamarl/agents/: epsilon_greedy_agent.py  random_agent.py
tamarl/core/: dnl.py  dnl_gemsim.py  dnl_matsim.py  jax_dnl.py  memory_profiler.py  network.py  network_loading.py  plot_histogram.py  torchdnl.py
tamarl/data/configs/: default_config.json
tamarl/data/scenarios/: test.json
tamarl/data/scenarios/berlin/: clean_create_path.py
tamarl/data/scenarios/braess/: generate_braess.py
tamarl/data/scenarios/equil/: generate_population.py
tamarl/data/scenarios/grid_world/: generate_grid_scenario.py  generate_grid_scenario_uniqueOD.py  generate_random_grid_scenario.py
tamarl/data/scenarios/ortuzar_willumsen/: generate_ow_population.py
tamarl/data/scenarios/shockwave/: generate_shockwave_pop.py  plot_shockwave_dynamics.py
tamarl/envs/: __init__.py  agent_level_wrapper.py  centralized_level_wrapper.py  dta_bandit_env.py  dta_env.py  dta_markov_game_parallel.py  od_level_wrapper.py  pomdp_wrapper.py  render.py  scenario_loader.py  vehicle_level_wrapper.py
tamarl/envs/components/: __init__.py  actions.py  cost_tracker.py  frank_wolfe.py  metrics.py  observations.py  path_enumerator.py  precompute_paths.py  rewards.py  route_utils.py  time_dependent_dijkstra.py  time_dependent_evaluator.py
tamarl/legacy_markov_game/agents/: msa_agent.py
tamarl/legacy_markov_game/components/: observations.py  scheduler.py
tamarl/legacy_markov_game/envs/: dta_markov_game_parallel.py
tamarl/rl/: __init__.py  render_helper.py  train.py  train_bandit.py  wandb_logger.py
tamarl/rl/agents/: __init__.py  aon_agent.py  epsilon_greedy_agent.py  evo_swap_agent.py  exp3_agent.py  msa_agent.py  random_agent.py  replicator_dynamics_agent.py  thompson_sampling_agent.py  ucb_agent.py
tamarl/rl_loop/: train_bandit.py  wandb_logger.py
tamarl/rl_models/: __init__.py  aon_agent.py  hab_agent.py  msa_agent.py  q_learning.py  random_agent.py  sb3_agent.py
tamarl/visualisation/: __init__.py  __main__.py  plot_histogram.py  renderer.py  sanity_checks.py
tests/: benchmark_dnl.py  benchmark_gemsim_dnl.py  benchmark_gridworld.py  benchmark_jax_dnl.py  benchmark_matsim_dnl.py  benchmark_siouxfalls.py  benchmark_torchdnl.py  compare_dnl.py  compare_paths.py  profile_dnl_workload_compare.py  profile_training.py  test_agent_robustness.py  test_dnl_matsim.py  test_env_basic.py  test_json_scenario.py  test_loading.py  test_markov_game_env.py  test_multi_leg_truncation.py  test_network_utils.py  test_one_shot.py  test_render_no_text.py  test_time_dependent_evaluator.py  test_torchdnl.py
(+5 files in other folders)
