[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamarl"
version = "0.1.0"
description = "Modular multi-agent reinforcement learning environment for traffic assignment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "torch_geometric",
    "pettingzoo",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tamarl*"]
